Fixed the width problem on Safari

--- a/AboutUs/PYLClock/style.css
+++ b/AboutUs/PYLClock/style.css
@@ -9,7 +9,7 @@
 
 .clockbox,
 #clock {
-    width: 100%;
+    width: 600px;
 }
 
 /* Clock styles */
@@ -57,10 +57,8 @@
 }
 
 /* Make all arms rotate around the same center point. */
-/* Optional: Use transition for animation. */
 #hour,
 #minute,
 #second {
     transform-origin: 300px 300px;
-    /*transition: transform .5s ease-in-out;*/
 }
